# siena_snowy_adventure

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CHECKPOINT_MAIN_PY_CHANGES.md  DIAGNOSE_ONLINE.md  DOWNLOAD_INSTRUCTIONS.md  FIREBASE_SECURITY_SETUP.md  HOW_TO_INSTALL_MAC.md  IMPROVEMENTS.md  INSTALL.command  INSTALL_INSTRUCTIONS.md  INSTALL_MAC.md  MUSIC_SYSTEM_UPDATE.md  Makefile  PHASE2_GAME_FEEL_IMPROVEMENTS.md  PRESS_ENTER_REMOVAL.md  QUICK_INSTALL.md  QUICK_INSTALL_WINDOWS.md  README.md  READY_FOR_DISTRIBUTION.md  SECURITY_AUDIT_FINAL.md  SECURITY_MIGRATION_SUMMARY.md  STORY_VISUAL_GUIDE.md  TESTING.md  TEXT_FITTING_UPDATE.md  WINDOWS_BUILD_INSTRUCTIONS.md  WINDOWS_README.txt  analyze_coin_collisions.py  analyze_hazard_placement.py  audio_manager.py  build_obfuscated.sh  build_release.sh  build_windows.bat  collision_physics.py  config.yaml  config_loader.py  constants.py  count_coins.py  debug_online.py  (+26 more)
docs/: ARCHITECTURE.md  GAME_IMPROVEMENTS.md  PROJECT_RESTRUCTURE.md  README.md  REFACTORING_PHASE1_COMPLETE.md  REFACTORING_PHASE2_PROGRESS.md  TEXT_POSITION_GUIDE.md  VERSION_MANAGEMENT.md
docs/development/: CHECKPOINT_IMPLEMENTATION.md  DIALOGUE_SYSTEM_UPDATE.md  PHASE2_COMPLETE.md  STORY_FLOW_FIX.md  STORY_FLOW_UPDATE.md  STORY_INTEGRATION_COMPLETE.md  UI_IMPROVEMENTS.md
docs/guides/: DISTRIBUTION_GUIDE.md  (+2 more)
enemies/: elkman.py  frost_golem.py  northerner.py  snowy.py  spiked_slime.py  swordsman.py
levels/: level_1_cabin.py  level_2_ski_lift.py  level_2_ski_lift.py.backup  level_3_mountain_climb.py  level_4_northern_lights.py  level_editor.py
player/: siena.py
src/: __init__.py
tests/: __init__.py  test_collision_physics.py
tools/: README.md  compress_images.py  convert_audio.py  convert_images_to_jpg.py  optimize_assets.py
ui/: appearing_platform.py  enemy_health_display.py  health_display.py  npc.py  roll_stamina_display.py  scoreboard.py  spin_charge_display.py  username_input.py  winter_theme.py
utils/: background.py  progression.py  save_system.py  settings.py
(+55 files in other folders)
